rajout paragraphe fichier index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+
         <html lang="fr">
             <head>
                 <meta charset="utf-8" />
                 <title>My Website Page</title>
             </head> 
-            <body>
+	    <body>
                 <h1>Je suis un titre MASTER</h1>
-            </body>
-        </html>
+                <h1>Je suis un titre MASTER</h1>
+                <h2>Je suis un nouveau sous-titre</h2>	 	
+	    </body>
+        </html>		
+
